# bot-rs

./: .env  Cargo.toml
src/: config.rs  handlers.rs  main.rs  music.rs
