[package]
name = "bot-rs"
version = "0.1.0"
authors = ["justincremer <jacremer@live.com>"]
edition = "2018"

[dependencies]
serenity = "0.10"
tokio = { version="1.0", features=["macros", "rt-multi-thread"] }
discord = { git="https://github.com/SpaceManiac/discord-rs" }
toml = "0.5"
serde = "1.0"
serde_derive = "1.0.11"
serde_json = "1.0"
